samples/fail/array_as_scalar.c
int main()
{
    int nums[2];
    int x = nums;
    return x;
}
